@@ -18,7 +18,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.guava.common.collect.ObjectArrays;
@@ -45,6 +44,7 @@ import org.osgi.annotation.versioning.ProviderType;
 import org.osgi.framework.Constants;
 
 import java.security.Principal;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -142,9 +142,9 @@ public abstract class CompositeConfiguration<T extends SecurityConfiguration> im
     @NotNull
     public List<T> getConfigurations() {
         if (configurations.isEmpty() && defaultConfig != null) {
-            return ImmutableList.of(defaultConfig);
+            return List.of(defaultConfig);
         } else {
-            return ImmutableList.copyOf(configurations);
+            return List.copyOf(configurations);
         }
     }
 
@@ -221,20 +221,21 @@ public abstract class CompositeConfiguration<T extends SecurityConfiguration> im
     public List<? extends CommitHook> getCommitHooks(@NotNull final String workspaceName) {
         Iterable<CommitHook> t = Iterables.concat(Lists.transform(getConfigurations(),
                 securityConfiguration -> securityConfiguration.getCommitHooks(workspaceName)));
-        return ImmutableList.copyOf(t);
+        return Collections.unmodifiableList(CollectionUtils.toList(t));
     }
 
     @NotNull
     @Override
     public List<? extends ValidatorProvider> getValidators(@NotNull final String workspaceName, @NotNull final Set<Principal> principals, @NotNull final MoveTracker moveTracker) {
         Iterable<ValidatorProvider> t = Iterables.concat(Lists.transform(getConfigurations(), securityConfiguration -> securityConfiguration.getValidators(workspaceName, principals, moveTracker)));
-        return ImmutableList.copyOf(t);
+        return Collections.unmodifiableList(CollectionUtils.toList(t));
     }
 
     @NotNull
     @Override
     public List<ThreeWayConflictHandler> getConflictHandlers() {
-        return ImmutableList.copyOf(Iterables.concat(Lists.transform(getConfigurations(), securityConfiguration -> securityConfiguration.getConflictHandlers())));
+        return CollectionUtils.toList(Iterables.concat(Lists.transform(getConfigurations(),
+                securityConfiguration -> securityConfiguration.getConflictHandlers())));
     }
 
     @NotNull
@@ -242,7 +243,7 @@ public abstract class CompositeConfiguration<T extends SecurityConfiguration> im
     public List<ProtectedItemImporter> getProtectedItemImporters() {
         Iterable<ProtectedItemImporter> t = Iterables.concat(Lists.transform(getConfigurations(),
                 securityConfiguration -> securityConfiguration.getProtectedItemImporters()));
-        return ImmutableList.copyOf(t);
+        return Collections.unmodifiableList(CollectionUtils.toList(t));
     }
 
     @NotNull
